--- a/ll-client/src/components/Hero.css
+++ b/ll-client/src/components/Hero.css
@@ -16,8 +16,10 @@
   text-align: center;
   color: white;
 }
+
 .content-text {
   text-align: left;
+  margin-right: 5rem;
 }
 
 .content h1 {
@@ -32,11 +34,19 @@
   letter-spacing: 2px;
 }
 
+.content-buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center-align elements in the column */
+  gap: 20px; /* Adds space between items */
+  position: relative;
+}
+
 a {
   text-decoration: none;
   color: white;
 }
-/* From Uiverse.io by SteveBloX */
+
 button {
   width: 250px;
   height: 40px;
@@ -47,7 +57,6 @@ button {
   background: #196725;
   font-size: 1.2em;
   font-weight: 550;
-  margin-bottom: 2rem;
 }
 
 button:hover {
@@ -57,13 +66,6 @@ button:hover {
 }
 
 #Logo-image {
-  height: 15rem;
-  width: auto;
-  position: absolute;
-  top: 160px;
-}
-
-#welcome-text {
-  margin-bottom: 100px;
-  margin-right: 30px;
+  height: auto;
+  width: 20rem;
 }
